  See menu File --> Find Preference

Update Commons Lang library to version 3.12.0,
  see https://commons.apache.org/proper/commons-lang/

Main application toolbar: Replaced the former Aliases and Session combo boxes by toolbar buttons
  which display popup menus to select Aliases and Session respectively.

Removed dependencies on outdated Hibernate libraries (3.2.4.sp1).


Bug fixes:

SQL editor: Double quoted (") tables used to be highlighted as error.
  Note: The default error highlight color is red, see menu File --> New Session Properties --> tab Syntax

#1506: Script generation didn't double quote column names when configured.
  Note: To configure double quoting go to menu File --> Global Preferences --> tab SQL Scripts

Code completion: Fixed/improved completion for double quoted (") identifiers, e.g. schemas, tables, columns.

Change tracking, left gutter popup to show changes:
  Fixed Nullpointer when popup was too long.

#1502 MAC OS: Made some standard navigation keyboard short cuts available for configuration.
  See menu File --> Global Preferences --> tab Keyboard shortcuts,
  entries caret-begin, caret-begin-line, caret-end, caret-end-line

#1505 Improved/fixed schema qualifying for scripting function.
  Note: To configure qualifying see menu File --> Global Preferences --> tab SQL Scripts

Current schema panel at the right of Session's status bar:
  Made setting the current schema work when query connection pool is used.

Plain SQL editor: Fixed ClassCastException when code completion was used.
  See menu File --> New Session Properties --> top of tab Syntax

Made undo (ctrl+Z) and redo (ctrl+R) available for the plain SQL editor, too.
  See menu File --> New Session Properties --> top of tab Syntax

Made undo (ctrl+Z) and redo (ctrl+R) shortcuts changeable
  at menu File --> Global Preferences --> tab Keyboard shortcuts.

Tools popup (ctrl+T) was far to wide because of too long description text.

#1502 MAC OS with Metal Look and Feel: